Sidenav Overflow Problem Solved

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -14,7 +14,6 @@
 }
 
 .componentContainer {
-    overflow-y: auto;
     max-height: calc(100% - 64px);
     margin: 5px;
 }
